--- a/resume_cijo.tex
+++ b/resume_cijo.tex
@@ -33,60 +33,12 @@
 \begin{document}
 
 %----------------------------------------------------------------------------------------
-%	PROFILE SUMMARY
+%	SUMMARY
 %----------------------------------------------------------------------------------------
 
-\begin{rSection}{Profile Summary}
+\begin{rSection}{Summary}
 
-Data Scientist/ Machine Learning Engineer with interest and experience in statistical analysis and machine learning techniques, frameworks and platforms. Passionate about designing and developing end-to-end data-driven solutions to challenging problems using state-of-the-art/ emerging technologies. 
-
-\end{rSection}
-
-%----------------------------------------------------------------------------------------
-%       TECHNICAL STRENGTHS SECTION
-%----------------------------------------------------------------------------------------
-
-\begin{rSection}{Technical Skills}
-
-\begin{rTechExpertiseList}
-\item {\bf Statistical analysis and machine learning}: Time-series analysis, forecasting and anomaly detection, classification, clustering, feature engineering, dimensionality reduction, model validation and evaluation techniques, intuitive understanding of mathematics behind learning models.
-\item {\bf Programming languages}: Python (scikit-learn, pandas, flask et al.), R (caret, dplyr, forecast, shiny et al.), BASH scripting (sed, awk et al.), SQL, C, C++, MPI, CUDA, Perl, PHP, HTML
-\item {\bf Frameworks, platforms and tools}: Hadoop (Hive, MapReduce), Jupyter, Docker, Nginx, Gunicorn, Git, Amazon Web Services (AWS), Cask Data Application Platform (CDAP), LaTeX.
-\item {\bf Other skills}: RESTful API design, agile development, working knowledge of operating systems, storage systems and networks.
-\end{rTechExpertiseList}
-
-\end{rSection}
-
-%----------------------------------------------------------------------------------------
-%	WORK EXPERIENCE SECTION
-%----------------------------------------------------------------------------------------
-
-\begin{rSection}{Professional Experience}
-
-\begin{rSubsection}{NetApp}{August 2012 - Present}{Member Technical Staff/ Data Scientist, Advanced Technology Group}{Bangalore}
-
-\item Lead advanced development projects with responsibility of studying the problem, proposing a solution, developing a working prototype/ proof-of-concept and taking prototypes into production.
-\smallskip
-\item Successfully completed multiple big data analytics projects involving statistical analysis and machine learning techniques including {\em time-series analysis/ anomaly detection/ forecasting}, {\em classification}, {\em clustering}, {\em feature engineering} and {\em dimensionality reduction} on machine generated data.
-\smallskip
-\item Designed and developed software to deploy statistical and machine learning models in production, with scalable {\em RESTful API interfaces} and {\em scale-out processing} of data analysis jobs for specific use-cases.
-\item Designed and prototyped a {\em data virtualization} solution providing a {\em data-pipeline} based approach for community-driven development of a semantic data catalog, with the goal of absorbing common machine learning and advanced analytics based data transformations into the data platform layer.
-\smallskip
-\item Co-authored technical reports on emerging technologies in big data analytics/ machine learning.
-\smallskip
-\item Co-authored an external publication on identifying/ troubleshooting performance problems in storage systems based on anomaly detection on time-series metrics collected from live systems.
-\smallskip
-\item Involved in pitching new project ideas, interacting with stakeholders (technical and non-technical), mentoring juniors/ interns and collaborating with researchers from top Indian universities.
-
-\end{rSubsection}
-
-%------------------------------------------------
-
-\begin{rSubsection}{Nokia Siemens Networks}{June 2009 - July 2010}{Software Engineer, R\&D}{Bangalore}
-\item Part of development team for HLR (Home Location Register), a key component for call handling and value added services in the telecommunications {\em core network}.
-\smallskip
-\item Involved in feature development for the next generation HLR release versions as well as maintenance of older versions.
-\end{rSubsection}
+A Technology Leader with 10+ years of experience in Engineering, Research and Leadership roles across AI/ML and Platform Engineering, with a passion for building innovative technologies and high-performance teams. 
 
 \end{rSection}
 
@@ -94,37 +46,57 @@ Data Scientist/ Machine Learning Engineer with interest and experience in statis
 %	EDUCATION SECTION
 %----------------------------------------------------------------------------------------
 
-\begin{rSection}{Education and Research Experience}
+\begin{rSection}{Education}
 
-{\bf Indian Institute of Science, Bangalore} \hfill {\em June 2013} \\ 
-{\em Supercomputer Education and Research Centre} \smallskip \\
-{\em Degree:} {\bf Master of Science in Engineering (by research)} \\
-{\em Thesis Title:} Fault Tolerance Strategies for Large Scale Systems
+{\bf Indian Institute of Science (IISc)} \hfill {2010 - 2012} \\ 
+{\em Supercomputer Education \& Research Centre} \smallskip \\
+{\em Degree:} {\bf Master of Science in Engineering (Research)} \\
+{\em Thesis:} Fault Tolerance Strategies for Large Scale Systems
 
-\begin {rEduContList}
+{\bf Cochin University of Science \& Technology (CUSAT)} \hfill {2005 - 2009} \\
+{\em Govt. Model Engineering College} \smallskip \\
+{\em Degree:} {\bf Bachelor of Technology, Computer Science \& Engineering}
 
-\item Developed and prototyped a fault avoidance technique for MPI applications based on partial replication of processes and dynamic changing of replica set, using failure probability models for predicting impending failures.
-\smallskip
-\item Developed a fault avoidance technique for malleable applications that dynamically changes the fault tolerance mechanism of the application throughout its execution, using failure probability models for predicting impending failures.
-\smallskip
-\item Developed a generic fault tolerance simulator for parallel computing systems. 
-\smallskip
-\item {\em Course project:} Developed an adaptive technique to maximize resource utilization of physical systems in a Cloud environment based on resource utilization metrics.
-\smallskip
-\item {\em Course project:} Worked on implementation of thread scheduling, system call interface, virtual memory and file system in Pintos OS framework.
-\smallskip
-\item {\em Teaching assistantship:} Worked as a TA for two graduate level courses - High Performance Computing, Parallel Programming.
+\end{rSection}
 
-\end {rEduContList}
+%----------------------------------------------------------------------------------------
+%	EXPERIENCE SECTION
+%----------------------------------------------------------------------------------------
 
-{\bf Cochin University of Science and Technology} \hfill {\em April 2009} \\
-{\em Government Model Engineering College} \smallskip \\
-{\em Degree:} {\bf Bachelor of Technology, Computer Science and Engineering}
+\begin{rSection}{Work Experience}
 
-\begin {rEduContList}
-\item {\em Course projects:} USB mass storage device sharing over TCP/IP network; A collaborative text editor.
-\item {\em Pet projects:} An online stock-exchange simulator with real-time data feeds from National Stock Exchange; BASH-as-a-service: A web-browser based remote interface to BASH.
-\end {rEduContList}
+\begin{rSubsection}{Head of Platform \& AI}{Dec 2019 - Dec 2020}{Belong.co}{Bengaluru}
+\item Responsible for building/ maintaining stable and scalable AI/ML and Platform Services for all SaaS products of Belong, serving enterprise customers in the recruitment domain.
+\item Led a team of Researchers/ Data Scientists and Backend Engineers working on {\em Machine Learning/ Deep Learning} algorithms and scalable {\em API services} for {\em Contextual Candidate/ Job Search}, {\em Resume Parsing}, {\em Personalized Content Generation} and {\em Content Delivery}.
+\item Led efforts to revamp Belong's {\em Resume Parsing} algorithm and service, making it scalable, with performance metrics at par with the best in the industry, ending dependence on paid third-party parsing services and enabling an additional revenue stream for the company.
+\item Architected and developed (hands-on) a revamped version of  {\em Contextual Candidate/ Job Search} ranking algorithm, making it vertical/ domain agnostic, to  serve different job verticals in international markets.
+\item Worked closely with Product Management to understand product requirements and influence product roadmap based on technology strategy and roadmap.
+
+\end{rSubsection}
+
+\begin{rSubsection}{Lead Data Scientist}{Jan 2019 - Nov 2020}{Belong.co}{Bengaluru}
+\item Architected and developed (hands-on + leading the team) automated {\em feedback loops} that incorporate Candidate preferences learned from previous engagements into the core {\em Search Ranking} algorithm.
+\item Led efforts in experimenting and building AI tools for a candidate facing product under development. 
+\item Hired, on-boarded and mentored Researchers/ Data Scientists and Interns; and led campus recruitment efforts for tech hiring.
+\end{rSubsection}
+
+\begin{rSubsection}{Senior Data Scientist}{Feb 2018 - Dec 2018}{Belong.co}{Bengaluru}
+\item Worked on improving the core recommendation system for Belong's flagship {\em Contextual People Search Engine} using techniques from across {\em Information Retrieval}, {\em Machine Learning}, {\em Deep Learning}, {\em Natural Language Processing} and {\em Statistical Analysis}.
+\item Implemented, {\em A/B tested} and launched multiple incremental updates to the core {\em Search Ranking} algorithm with new signals, improving performance metrics by more than 50\%.  
+\item Built the first version of {\em Belong Knowledge Graph}, powered by a scalable graph database, to capture relationships between Candidates, Skills,  Designations, Employers, Schools etc., enabling efficient Ad hoc complex queries across multiple dimensions for various use cases.
+
+\end{rSubsection}
+
+\begin{rSubsection}{Researcher (Advanced Technology Group, CTO Office)}{Aug 2012 - Jan 2018}{NetApp, Inc.}{Bengaluru}
+\item Led advanced development projects with responsibility of studying the problem, proposing a solution, developing a working prototype/ proof-of-concept and taking prototypes into production.
+\item Worked on applying classical {\em Machine Learning}, {\em Neural Networks} and {\em Time-series Analysis} ({\em Forecasting}, {\em Anomaly Detection}) on System Performance Metrics and Log data for various use cases.
+\item Co-authored multiple peer-reviewed external publications, and several internal reports to influence long-term technology strategy of NetApp. 
+\end{rSubsection}
+
+\begin{rSubsection}{Software Engineer (R\&D)}{Jun 2009 - Jul 2010}{Nokia Siemens Networks}{Bengaluru}
+\item Part of development team for {\em HLR (Home Location Register)}, a key component for call handling and value-added services in the telecommunications core network. Involved in feature development for the next generation {\em HLR} release versions as well as maintenance of older versions.
+
+\end{rSubsection}
 
 \end{rSection}
 
@@ -132,9 +104,10 @@ Data Scientist/ Machine Learning Engineer with interest and experience in statis
 %	PUBLICATION
 %----------------------------------------------------------------------------------------
 
-\begin{rSection}{External Publication}
+\begin{rSection}{External Publications}
 
 \begin{rPubPatContList}
+\item Rukma Talwadker, {\bf Cijo George}, ``Yodea: Workload Pattern Assessment Tool for Cloud Migration", {\em CloudCom '18: Proceedings of the 10th IEEE International Conference on Cloud Computing Technology and Science}, Nicosia, Cyprus, December 2018.
 \item {\bf Cijo George}, Sathish Vadhiyar, ``Fault Tolerance on Large Scale Systems using Adaptive Process Replication", {\em IEEE Transactions on Computers}, September 2014.
 \item Vipul Mathur, {\bf Cijo George}, Jayanta Basak, ``Anode: Empirical Detection of Performance Problems in Storage Systems using Time-Series Analysis of Periodic Measurements", {\em MSST '14: Proceedings of the 30th International Conference on Massive Storage Systems and Technology (IEEE)}, Santa Clara, California, June 2014.
 \item {\bf Cijo George}, Sathish Vadhiyar, ``AdFT: An Adaptive Framework for Fault Tolerance on Large Scale Systems using Application Malleability", {\em ICCS '12: Proceedings of the International Conference on Computational Science (Elsevier)}, Omaha, Nebraska, June 2012.
@@ -143,16 +116,34 @@ Data Scientist/ Machine Learning Engineer with interest and experience in statis
 \end{rSection}
 
 %----------------------------------------------------------------------------------------
+%       TECHNICAL STRENGTHS SECTION
+%----------------------------------------------------------------------------------------
+
+\begin{rSection}{Familiar Techniques, Tools \& Tech Stack}
+
+\begin{rTechExpertiseList}
+\item {\bf Data Science}: Working knowledge of {\em Deep Learning}/ {\em Neural Networks} for {\em Natural Language Processing} ({\em Embeddings}, {\em Recurrent Models}, {\em Convolutional Models}, {\em Attention-based Models}, {\em Transformer-based Models}), {\em Gibbs Sampling}, {\em Latent Dirichlet Allocation}, {\em Hidden Markov Models}, {\em Page-Rank}, Classical Machine Learning ({\em Regression}, {\em Trees \& Forests}, {\em SVN}, {\em KNN}), {\em Time-series Analysis}.
+\item{\bf Math}: Intuitive understanding of math behind familiar Data Science techniques.
+\item {\bf Programming}: Most familiar with {\em Python}. Have worked with {\em Shell scripting}, {\em SQL}, {\em R}, {\em C}, {\em C++}, {\em MPI}, {\em CUDA}, {\em Perl}, {\em PHP}, {\em HTML}.
+\item {\bf Tools \& Tech Stack}: Familiar with {\em Django}, {\em Celery}, {\em Jupyter}, {\em Git}, {\em Dgraph} (Graph Database), {\em Docker}, {\em Nginx}, {\em Gunicorn}, {\em Kubernetes}, {\em AWS}, {\em Hadoop} ({\em Hive}, {\em MapReduce}).
+\item {\bf Others}: {\em RESTful API Design}, {\em Agile} Development, Working Knowledge of Operating Systems, Storage Systems and Networks.
+\end{rTechExpertiseList}
+
+\end{rSection}
+
+%------------------------------------------------
+
+%----------------------------------------------------------------------------------------
 %	PATENTS
 %----------------------------------------------------------------------------------------
 
-\begin{rSection}{Patents Filed}
+%\begin{rSection}{Patents Filed}
 
-\begin{rPubPatContList}
-\item Vipul Mathur, {\bf Cijo George}, Swaminathan Ramany, {\em ``System and Method for Analyzing a Storage System for Performance Problems using Parametric Data"}, United States 14/194,467, Filed: February 28, 2014.
-\end{rPubPatContList}
+%\begin{rPubPatContList}
+%\item Vipul Mathur, {\bf Cijo George}, Swaminathan Ramany, {\em ``System and Method for Analyzing a Storage System for Performance Problems using Parametric Data"}, United States 14/194,467, Filed: February 28, 2014.
+%\end{rPubPatContList}
    
-\end{rSection}
+%\end{rSection}
 
 %----------------------------------------------------------------------------------------
 %	AWARDS & RECOGNITION
@@ -172,14 +163,14 @@ Data Scientist/ Machine Learning Engineer with interest and experience in statis
 %	SOCIAL MEDIA
 %----------------------------------------------------------------------------------------
 
-\begin{rSection}{Contact Details and Social Profiles}
+%\begin{rSection}{Contact Details and Social Profiles}
 
-\begin{rPubPatContList}
-\item {\bf Email:} cijogeorge.in@gmail.com, {\bf Phone:} +91 99 4567 0410
-\item {\bf LinkedIn}.com/in/cijogeorge, {\bf GitHub}.com/cijogeorge
-\end{rPubPatContList}
+%\begin{rPubPatContList}
+%\item {\bf Email:} cijogeorge.in@gmail.com, {\bf Phone:} +91 99 4567 0410
+%\item {\bf LinkedIn}.com/in/cijogeorge, {\bf GitHub}.com/cijogeorge
+%\end{rPubPatContList}
 
-\end{rSection}
+%\end{rSection}
 
 %----------------------------------------------------------------------------------------
 %	EXAMPLE SECTION
