--- a/resume_cijo.tex
+++ b/resume_cijo.tex
@@ -124,7 +124,7 @@ A Technology Leader with 10+ years of experience in Engineering, Research and Le
 \begin{rTechExpertiseList}
 \item {\bf Data Science}: Working knowledge of {\em Deep Learning}/ {\em Neural Networks} for {\em Natural Language Processing} ({\em Embeddings}, {\em Recurrent Models}, {\em Convolutional Models}, {\em Attention-based Models}, {\em Transformer-based Models}), {\em Gibbs Sampling}, {\em Latent Dirichlet Allocation}, {\em Hidden Markov Models}, {\em Page-Rank}, Classical Machine Learning ({\em Regression}, {\em Trees \& Forests}, {\em SVN}, {\em KNN}), {\em Time-series Analysis}.
 \item{\bf Math}: Intuitive understanding of math behind familiar Data Science techniques.
-\item {\bf Programming}: Most familiar with {\em Python}. Have worked with {\em Shell scripting}, {\em SQL}, {\em R}, {\em C}, {\em C++}, {\em MPI}, {\em CUDA}, {\em Perl}, {\em PHP}, {\em HTML}.
+\item {\bf Programming}: Most familiar with {\em Python}. Have worked with {\em Shell scripting}, {\em SQL}, {\em R}, {\em Java}, {\em C}, {\em C++}, {\em MPI}, {\em CUDA}, {\em Perl}, {\em PHP}, {\em HTML}.
 \item {\bf Tools \& Tech Stack}: Familiar with {\em Django}, {\em Celery}, {\em Jupyter}, {\em Git}, {\em Dgraph} (Graph Database), {\em Docker}, {\em Nginx}, {\em Gunicorn}, {\em Kubernetes}, {\em AWS}, {\em Hadoop} ({\em Hive}, {\em MapReduce}).
 \item {\bf Others}: {\em RESTful API Design}, {\em Agile} Development, Working Knowledge of Operating Systems, Storage Systems and Networks.
 \end{rTechExpertiseList}
