--- a/resume_cijo.tex
+++ b/resume_cijo.tex
@@ -38,7 +38,7 @@
 
 \begin{rSection}{Summary}
 
-A Technology Leader with 10+ years of experience in Engineering, Research and Leadership roles across AI/ML and Platform Engineering, with a passion for building innovative technologies and high-performance teams. 
+A Technology Leader with 10+ years of experience in Engineering, Research, and Leadership roles across AI/ML and Platform Engineering, with a passion for building innovative tech and high-performance teams. 
 
 \end{rSection}
 
@@ -69,14 +69,14 @@ A Technology Leader with 10+ years of experience in Engineering, Research and Le
 \item Responsible for building/ maintaining stable and scalable AI/ML and Platform Services for all SaaS products of Belong, serving enterprise customers in the recruitment domain.
 \item Led a team of Researchers/ Data Scientists and Backend Engineers working on {\em Machine Learning/ Deep Learning} algorithms and scalable {\em API services} for {\em Contextual Candidate/ Job Search}, {\em Resume Parsing}, {\em Personalized Content Generation} and {\em Content Delivery}.
 \item Led efforts to revamp Belong's {\em Resume Parsing} algorithm and service, making it scalable, with performance metrics at par with the best in the industry, ending dependence on paid third-party parsing services and enabling an additional revenue stream for the company.
-\item Architected and developed (hands-on) a revamped version of  {\em Contextual Candidate/ Job Search} ranking algorithm, making it vertical/ domain agnostic, to  serve different job verticals in international markets.
+\item Architected and developed (hands-on) a revamped version of  {\em Contextual Candidate/ Job Search} ranking algorithm, making it vertical/ domain agnostic, to serve different job verticals in international markets.
 \item Worked closely with Product Management to understand product requirements and influence product roadmap based on technology strategy and roadmap.
 
 \end{rSubsection}
 
 \begin{rSubsection}{Lead Data Scientist}{Jan 2019 - Nov 2019}{Belong.co}{Bengaluru}
 \item Architected and developed (hands-on + leading the team) automated {\em feedback loops} that incorporate Candidate preferences learned from previous engagements into the core {\em Search Ranking} algorithm.
-\item Led efforts in experimenting and building AI tools for a candidate facing product under development. 
+\item Led the efforts in experimenting and building AI tools for a candidate-facing product under development. 
 \item Hired, on-boarded and mentored Researchers/ Data Scientists and Interns; and led campus recruitment efforts for tech hiring.
 \end{rSubsection}
 
@@ -94,7 +94,7 @@ A Technology Leader with 10+ years of experience in Engineering, Research and Le
 \end{rSubsection}
 
 \begin{rSubsection}{Software Engineer (R\&D)}{Jun 2009 - Jul 2010}{Nokia Siemens Networks}{Bengaluru}
-\item Part of development team for {\em HLR (Home Location Register)}, a key component for call handling and value-added services in the telecommunications core network. Involved in feature development for the next generation {\em HLR} release versions as well as maintenance of older versions.
+\item Part of the development team for {\em HLR (Home Location Register)}, a key component for call handling and value-added services in the telecommunications core network. Involved in feature development for the next generation {\em HLR} release versions as well as maintenance of older versions.
 
 \end{rSubsection}
 
