--- a/resume_cijo.tex
+++ b/resume_cijo.tex
@@ -38,7 +38,7 @@
 
 \begin{rSection}{Summary}
 
-A Technology Leader with 10+ years of experience in Engineering, Research, and Leadership roles across AI/ML and Platform Engineering, with a passion for building innovative tech and high-performance teams. 
+A Technology Leader with \~12 years of experience in Engineering, Research, \& Leadership roles across AI/ML \& Platform Engineering, with a passion for building innovative tech \& high-performance teams. 
 
 \end{rSection}
 
